2007-08-14  Alexander V. Lukyanov <lav@yars.free.net>

	* FileSet.cc, FileSet.h: fix clone ctor, add Dump method.
	* MirrorJob.cc: use NO_DATE.
	* ftpclass.cc: don't do ResetLocationDate in clone ctor - it leads
	  to loss of cwd; set correct real_cwd when handling of CWD reply.
	* NetAccess.cc: save listing in cache with proper mode.
	* commands.cc: update copyright.
	* ftpclass.cc: don't change TYPE unless needed.

2007-08-13  Alexander V. Lukyanov <lav@yars.free.net>

	* xarray.h: zero terminate xarray_p.
	* ftpclass.cc: correctly truncate xstring.
	* FtpDirList.cc: fixed list colouring (line parse).
	* StringSet.cc: optimize.

2007-08-10  Alexander V. Lukyanov <lav@yars.free.net>

	* Ref.h, xarray.h, SMTash.h: make a base class _RefArray; new class
	  TaskRefArray; new class xarray_p; (xarray::borrow) new method.
	* StringPool.cc, StringPool.h, StringSet.cc, StringSet.h: use xarray_p.
	* pgetJob.cc, pgetJob.h: use TaskRefArray.
	* ftpclass.cc, ftpclass.h: check anonymous password for leading minus sign
	  before enabling stat-for-list.

2007-08-08  Alexander V. Lukyanov <lav@yars.free.net>

	* ResMgr.cc, url.cc: use xstring and StringSet.
	* xarray.cc, xarray.h: new files.
	* Makefile.am: add xarray files.
	* NetAccess.cc, NetAccess.h, ftpclass.cc, Http.cc, FileSet.cc,
	  FileSet.h, PollVec.cc, PollVec.h, ColumnOutput.cc, ColumnOutput.h,
	  Resolver.cc, Resolver.h: use xarray.
	* StringSet.h: (borrow) new method.
	* Ref.h: make RefArray a friend.

2007-08-06  Alexander V. Lukyanov <lav@yars.free.net>

	* FileSet.h, FileSet.cc: (NotNewerThan, NotOlderThan, Subtract*) new methods.
	* MirrorJob.cc: use SubtractNotNewerThan and SubtractNotOlderThan.

2007-08-02  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, NetAccess.cc, NetAccess.h: increment retries on
	  soft transfer errors which do not cause disconnect; check retry
	  count before re-starting transfer.
	* FileCopy.cc: increment saved retry count before next try.