@@ -27,10 +27,10 @@
 void xarray0::get_space(size_t s,size_t g)
 {
    if(!buf)
-      buf=xmalloc(element_size*(size=s));
-   else if(size<s+1)
-      buf=realloc(buf,element_size*(size=(s|(g-1))+1));
-   else if(size>=g*8 && s<size/2)
+      buf=xmalloc(element_size*(size=s+keep_extra));
+   else if(size<s+keep_extra)
+      buf=realloc(buf,element_size*(size=(s|(g-1))+keep_extra));
+   else if(size>=g*8 && s+keep_extra<=size/2)
       buf=realloc(buf,element_size*(size/=2));
 }
 
